--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 </div>
 <div class="clr"></div>
 <diV class="box">
- <p>Psixologlar<br>ro'yxati</p>
- <iframe src="table.html" width="100%" height="1000px"></iframe>
+<!-- <p>Psixologlar<br>ro'yxati</p>
+ <iframe src="table.html" width="100%" height="1000px"></iframe>-->
 </div>
     
   </diV>
