--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <div>
   <h3>Xush kelibsiz</h3>
   <div class="ok">
-  <div class="content"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis vitae neque ipsam quas officiis dignissimos deserunt voluptates ducimus ratione est. Non, commodi! Eos laborum nisi rem deleniti nostrum quos optio.</p></div>
+  <div class="content"><p>Biznnng dasturimizga xush kelibsiz endi siz yuqori sifatli pisixloglar xizmatidan foydalanishingz mumkin  </p></div>
 </div>
-  <div class="sidebar"><p><iframe src=""><p>Hwllo World</p></iframe></p>
+  <div class="sidebar"><p>BIzni tanlaganingiz uchun raxmat sizlar bilan biz yana yuksalishni davom etamiz!!! </p>
 </div>
 
 </div>
