--- a/table.html
+++ b/table.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<title>Пример html таблицы c подсветкой четных и нечетных строк на CSS3</title>
+		<title>ro'yxat</title>
 	</head>
 	<body>
 		<table>
