--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="kontner">
 <ul>
   <li><a href="register.html">Ro'yxatdan o'tish</a></li>
-  <li><a href="ro'yxat.html">Xizmatlar</a></li>
-  <li><a href="homme">Bog'lanish</a></li>
+<!--  <li><a href="ro'yxat.html">Xizmatlar</a></li>-->
+  <li ><a href="register.html">Bog'lanish</a></li>
 </ul>
 
   </div>
