--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div id="main" >
   <div>
-  <h3>Xush kelibsiz</h3>
+  <h3 style="margin=20px">Xush kelibsiz</h3>
   <div class="ok">
   <div class="content"><p>Biznnng dasturimizga xush kelibsiz endi siz yuqori sifatli pisixloglar xizmatidan foydalanishingz mumkin  </p></div>
 </div>
